# City-DS

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: Data Export All Games.ipynb  Data Mapping.ipynb  ManCity_Liverpool Analyis.ipynb  ManCity_Tottenham Analyis.ipynb  Pitch Control Second Spectrum.ipynb  VAEP.ipynb  merged_df.csv  obv_possessions.csv  pitch_control_ss.ipynb  possession_animation.ipynb  rough_mapping.csv  statsbmb.csv  values_df.csv
src/: pitch_control.py  player_velocities.py  possession_threat.py  second_spectrum_utils.py  statsbomb_util.py  visualizations.py
src/app/: app.py
