[tool.poetry]
name = "man-city-analytics"
version = "0.1.0"
description = ""
authors = ["liammoore44 <liammoore4441@gmail.com>"]
readme = "README.md"
packages = [{include = "man_city_analytics"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
socceraction = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
