[tool.poetry]
name = "CITY-DS"
version = "0.1.0"
description = ""
authors = ["liammoore44 <liammoore4441@gmail.com>"]
readme = "README.md"
packages = [{include = "man_city_analytics"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
socceraction = "^1.4.0"
flake8 = "^6.0.0"
kloppy = "^3.9.0"
moviepy = "^1.0.3"
matplotlib = "^3.7.1"
matplotsoccer = "^0.0.8"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
